[package]
name = "path-router"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"
actix-router = "^0.1"
path-table = "^1.0"
route-recognizer = "^0.1"
path-tree ="^0.1"

[[bench]]
name = "benchmarks"
harness = false